Update start + app title As well as content updates for the following cards: - ei regular - cerb (alone) And removed aria-label from back link button

--- a/locales/en.json
+++ b/locales/en.json
@@ -11,7 +11,7 @@
   "Please correct the errors on the page": "Please correct the errors on the page",
   "Skip to main content": "Skip to main content",
   "app.phase": "ALPHA",
-  "app.title": "Money for COVID—19",
+  "app.title": "Find financial help during COVID-19",
   "button.back": "Back",
   "ccb.1": "Yes.",
   "ccb.2": "No.",
@@ -23,18 +23,18 @@
   "ccb_payment.link": "https://www.canada.ca/en/department-finance/economic-response-plan.html#individuals",
   "ccb_payment.linktext": "Learn more about the Canada Child Benefit",
   "ccb_payment.preamble": "<p>The benefit can help if you:</p><ul class='list-disc list-outside'><li>Care for a child under 18 years old</li></ul><p>Good to know:</p><ul class='list-disc list-outside'><li>Check your bank account to find out if you’ve been receiving the Canada Child Benefit. </li><li><a href='https://www.canada.ca/en/revenue-agency/services/child-family-benefits/benefit-payment-dates.html' target='_blank'>Dates of payments are available</a> online.</li></ul>",
-  "cerb.box1": "$500 per week<span class='hide--mobile'>, </span><br class='hide--desktop' />paid every 4 weeks",
+  "cerb.box1": "$2,000 every 4 weeks",
   "cerb.box2": "Up to 4 months",
   "cerb.box3": "First payment within 10 days of applying",
   "cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
   "cerb.linktext": "Apply for CERB",
-  "cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you:</p><ul class='list-outside list-disc'><li>Stopped working for at least 14 consecutive days because of COVID—19.</li> <li>Earned at least $5,000 in the last 12 months.</li></ul><p>Good to know:</p><ul class='list-outside list-disc'><li>Available from March 15 to October 3, 2020.</li><li>You’ll need to re-apply for each 4-week period you’re not working.</li><li>You’ll need to pay income tax on these payments in the future.</li> </ul>",
+  "cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you:</p><ul class='list-outside list-disc'><li>Did not leave your job voluntarily.</li> <li>Earned at least $5,000 in 2019 or the last 12 months.</li><li>Stopped working for at least 14 consecutive days because of COVID-19: <ul><li>In the first 4 weeks you apply for, you received no income for at least 14 consecutive days.</li><li>For the next 4-week periods after your first application, you expect to receive no income at all for the whole period.</li></ul></li></ul><p>Good to know:</p><ul class='list-outside list-disc'><li>Available from March 15 to October 3, 2020.</li><li>You’ll need to re-apply for each 4-week period you’re not working.</li><li>You’ll need to pay income tax on these payments in the future.</li> </ul>",
   "ei_regular.box1": "55% of your income<span class='hide--mobile'>, </span><br class='hide--desktop' />paid every 2 weeks",
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
   "ei_regular.link": "https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html",
   "ei_regular.linktext": "Apply for EI Regular Benefits",
-  "ei_regular.preamble": "<p>EI can help if you:</p><ul class='list-disc list-outside'><li>Paid into EI, usually through your employer. Check your pay stub to see if you have EI deductions.</li><li>Worked the minimum number of “insurable hours.”</li></ul><p>Good to know:</p><ul><li>Even if you left your job voluntarily for your health needs during COVID—19, you may still be eligible for EI.</li><li>The number of weeks you get paid depends on how many “insurable hours” you worked in the last 52 weeks.</li></ul>",
+  "ei_regular.preamble": "<p>EI can help if you:</p><ul class='list-disc list-outside'><li>Paid into EI, usually through your employer. Check your pay stub to see if you have EI deductions.</li><li>Worked the minimum number of “insurable hours” in the last 52 weeks.</li></ul><p>Good to know:</p><ul><li>Even if you left your job voluntarily for your health needs during COVID—19, you may still be eligible for EI.</li><li>The number of weeks you get paid depends on how many “insurable hours” you worked in the last 52 weeks.</li></ul>",
   "ei_regular_and_cerb.box1": "$500 per week<span class='hide--mobile'>, </span><br class='hide--desktop' />paid every 4 weeks",
   "ei_regular_and_cerb.box2": "First payment within 10 days of applying",
   "ei_regular_and_cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
@@ -119,7 +119,7 @@
   "start.intro.2": "Your answers do not impact your eligibility. See our <a href='https://digital.canada.ca/legal/privacy/' target='_blank'>Privacy policy</a> and <a href='https://digital.canada.ca/legal/terms/' target='_blank'>Terms and conditions</a> for more information. ",
   "start.submit": "Start now",
   "start.subtitle": "Find out what financial help is available",
-  "start.title": "Money for COVID—19",
+  "start.title": "Find financial help during COVID-19",
   "start_over": "Start over",
   "student_debt.1": "Yes.",
   "student_debt.2": "No.",
