--- a/locales/fr.json
+++ b/locales/fr.json
@@ -11,7 +11,7 @@
   "Please correct the errors on the page": "Veuillez corriger les erreurs trouvées dans la page",
   "Skip to main content": "Passer au contenu principal",
   "app.phase": "ALPHA",
-  "app.title": "Argent pour la COVID‑19",
+  "app.title": "Trouver de l’aide financière pendant la COVID-19",
   "button.back": "Retour",
   "ccb.1": "Oui.",
   "ccb.2": "Non.",
@@ -23,18 +23,18 @@
   "ccb_payment.link": "https://www.canada.ca/fr/ministere-finances/plan-intervention-economique.html#particuliers",
   "ccb_payment.linktext": "En savoir plus à propos de l’Allocation canadienne pour enfant ",
   "ccb_payment.preamble": "<p>Cette prestation peut vous aider si :</p><ul class='list-disc list-outside'><li>vous avez la charge d’un enfant de moins de 18 ans. </li></ul><p>Bon à savoir :</p><ul class='list-disc list-outside'><li>Consultez vos relevés bancaires afin de déterminer si vous recevez déjà l’Allocation canadienne pour enfant.</li><li><a href='https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/dates-versement-prestations.html' target='_blank'>Consultez les dates de versement des prestations</a>.</li></ul>",
-  "cerb.box1": "500 $ par semaine<span class='hide--mobile'>, </span><br class='hide--desktop' />versement aux 4 semaines",
+  "cerb.box1": "2000 $ aux 4 semaines",
   "cerb.box2": "Pendant 4 mois maximum",
   "cerb.box3": "À recevoir au plus tard 10 jours après la demande",
   "cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "cerb.link": "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
   "cerb.linktext": "Demander la PCU",
-  "cerb.preamble": "<p>La Prestation canadienne d’urgence (PCU) peut vous aider si :</p><ul class='list-outside list-disc'><li>vous avez arrêté de travailler pendant au moins 14 jours consécutifs en raison de la COVID—19.</li> <li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li></ul><p>Bon à savoir :</p><ul class='list-outside list-disc'><li>Offerte du 15 mars au 3 octobre 2020.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines.</li><li>Ces montants sont imposables.</li> </ul>",
+  "cerb.preamble": "<p>Cette prestation peut vous aider si : </p><ul class='list-outside list-disc'><li>vous avez été forcé de quitter votre emploi.</li><li>vous avez gagné un revenu d’au moins 5000 $ en 2019 ou dans les 12 derniers mois.</li><li>vous avez arrêté de travailler en raison de la COVID-19 :<ul><li>Vous n’avez pas eu de revenu pendant au moins 14 jours consécutifs durant les 4 premières semaines de votre demande.</li><li>Vous anticipez ne pas recevoir aucun revenu pour les prochaines périodes de 4 semaines.</li></ul></li></ul><p>Bon à savoir :</p><ul class='list-outside list-disc'><li>Offerte du 15 mars au 3 octobre 2020.</li><li>Vous devrez présenter une nouvelle demande à chaque période de 4 semaines.</li><li>Ces montants sont imposables.</li> </ul>",
   "ei_regular.box1": "55 % de votre revenu<span class='hide--mobile'>, </span><br class='hide--desktop' />versement aux 2 semaines",
   "ei_regular.header": "Présenter une demande pour les prestations régulières de l’assurance-emploi (AE)",
   "ei_regular.link": "https://www.canada.ca/fr/services/prestations/ae/assurance-emploi-reguliere/demande.html",
   "ei_regular.linktext": "Demander les prestations regulières de l’assurance-emploi",
-  "ei_regular.preamble": "<p>L’assurance-emploi peut vous aider si</p><ul class='list-disc list-outside'><li>vous avez contribué à l’assurance-emploi, normalement par votre employeur. Consultez votre paye pour déterminer si vous avez contribué à l’assurance emploi.</li><li>vous avez travaillé le nombre minimum “d’heure assurables”.</li></ul><p>Bon à savoir :</p><ul><li>Vous pourriez être admissible à l’assurance-emploi même si vous avez quitté votre emploi volontairement pour des raisons de santé liées à la COVID—19.</li><li>Le nombre de semaines admissible dépend du nombre “d’heures assurables” travaillées lors des 52 semaines précédentes.</li></ul>",
+  "ei_regular.preamble": "<p>L’assurance-emploi peut vous aider si</p><ul class='list-disc list-outside'><li>vous avez contribué à l’assurance-emploi, normalement par votre employeur. Consultez votre paye pour déterminer si vous avez contribué à l’assurance emploi.</li><li>vous avez travaillé le nombre minimum “d’heure assurables” lors des  52 semaines précédentes.</li></ul><p>Bon à savoir :</p><ul><li>Vous pourriez être admissible à l’assurance-emploi même si vous avez quitté votre emploi volontairement pour des raisons de santé liées à la COVID—19.</li><li>Le nombre de semaines admissible dépend du nombre “d’heures assurables” travaillées lors des 52 semaines précédentes.</li></ul>",
   "ei_regular_and_cerb.box1": "500 $ par semaine<span class='hide--mobile'>, </span><br class='hide--desktop' />versement aux 4 semaines",
   "ei_regular_and_cerb.box2": "À recevoir au plus tard 10 jours après la demande",
   "ei_regular_and_cerb.link": "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
@@ -116,7 +116,7 @@
   "start.intro.2": "Vos réponses n’influenceront pas votre admissibilité. Consultez notre <a href='https://numerique.canada.ca/transparence/confidentialite/' target='_blank'>Politique de confidentialité</a> et <a href='https://numerique.canada.ca/transparence/avis/' target='_blank'>l’Avis</a> pour en savoir plus.",
   "start.submit": "Commencer",
   "start.subtitle": "Trouvez quelle aide financière vous est offerte",
-  "start.title": "Argent pour la COVID—19",
+  "start.title": "Trouver de l’aide financière pendant la COVID-19",
   "start_over": "Recommencer",
   "student_loan.box1": "Les paiements sont automatiquement supsendus",
   "student_loan.box2": "Du 30 mars 2020 jusqu’au 30 septembre 2020",
