--- a/locales/en.json
+++ b/locales/en.json
@@ -35,18 +35,18 @@
   "ei_regular.link": "https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html",
   "ei_regular.linktext": "Apply for EI Regular Benefits",
   "ei_regular.preamble": "<p>EI can help if you:</p><ul class='list-disc list-outside'><li>Paid into EI, usually through your employer. Check your pay stub to see if you have EI deductions.</li><li>Worked the minimum number of “insurable hours.”</li></ul><p>Good to know:</p><ul><li>Even if you left your job voluntarily for your health needs during COVID—19, you may still be eligible for EI.</li><li>The number of weeks you get paid depends on how many “insurable hours” you worked in the last 52 weeks.</li></ul>",
-  "ei_regular_and_cerb.box1": "$500 per week<span class='hide--mobile'>, </span><br class='hide--desktop' />paid every 4 weeks",
-  "ei_regular_and_cerb.box2": "First payment within 10 days of applying",
+  "ei_regular_and_cerb.box1": "$2,000 for the first 4 weeks",
+  "ei_regular_and_cerb.box2": "$1,000 every 2 weeks after that",
   "ei_regular_and_cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
-  "ei_regular_and_cerb.linktext": "Apply for EI Regular Benefits and CERB",
+  "ei_regular_and_cerb.linktext": "Apply for CERB",
   "ei_regular_and_cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you</p><ul><li>Stopped working for at least 14 consecutive days because of COVID—19.</li><li>Earned at least $5,000 in 2019 or the last 12 months.</li></ul><p>Good to know:</p><ul class='list-disc list-outside'><li>Even if you left your job voluntarily for your health needs during COVID—19, you may still be eligible for EI.</li><li>You’ll need to re-apply for CERB for each 4-week period you’re not working</li></ul><p>If you’re eligible for both Employment Insurance (EI) and the Canada Emergency Response Benefit (CERB), you will receive CERB for the first 4 months. Then you’ll automatically start receiving EI Regular Benefits after, if you’re still not working.</p>",
-  "ei_regular_cerb.header": "Apply for both CERB and EI Regular Benefits",
-  "ei_sickness_cerb.box1": "$500 per week<span class='hide--mobile'>, </span><br class='hide--desktop' />paid every 4 weeks",
-  "ei_sickness_cerb.box2": "Up to 4 months",
+  "ei_regular_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
+  "ei_sickness_cerb.box1": "$2,000 for the first 4 weeks",
+  "ei_sickness_cerb.box2": "$1,000 every 2 weeks after that",
   "ei_sickness_cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
-  "ei_sickness_cerb.linktext": "Apply for EI Sickness Benefits and CERB",
+  "ei_sickness_cerb.linktext": "Apply for CERB",
   "ei_sickness_cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you:</p><ul><li>Stopped working for at least 14 consecutive days because of COVID—19.</li><li>Earned at least $5,000 in 2019 or the last 12 months.</li></ul><p>If you’re eligible for both EI  Sickness Benefits and CERB, you will receive CERB for the first 4 months you’re off work. Then you’ll automatically start receiving EI Sickness Benefits after, if you’re still not working.</p>",
-  "ei_sickness_cerb.header": "Apply for both CERB and Employment Insurance (EI) Sickness Benefits",
+  "ei_sickness_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "ei_workshare.box1": "Receive EI benefits",
   "ei_workshare.box2": "Up to 76 weeks",
   "ei_workshare.header": "Talk to your employer and coworkers about Employment Insurance (EI) Work-Sharing ",
