--- a/locales/en.json
+++ b/locales/en.json
@@ -45,7 +45,7 @@
   "ei_sickness_cerb.box2": "$1,000 every 2 weeks after that",
   "ei_sickness_cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
   "ei_sickness_cerb.linktext": "Apply for CERB",
-  "ei_sickness_cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you:</p><ul><li>Stopped working for at least 14 consecutive days because of COVID—19.</li><li>Earned at least $5,000 in 2019 or the last 12 months.</li></ul><p>If you’re eligible for both EI  Sickness Benefits and CERB, you will receive CERB for the first 4 months you’re off work. Then you’ll automatically start receiving EI Sickness Benefits after, if you’re still not working.</p>",
+  "ei_sickness_cerb.preamble": " <p><strong>The benefit can help if you:</strong></p> <ul class='list-disc list-outside'> <li> Did not leave your job voluntarily. </li> <li>Earned at least $5,000 in 2019 or the last 12 months.</li> <li>Stopped working because of COVID—19: <ul class='list-disc list-outside'> <li>In the first 4 weeks you apply for, you received no income for at least 14 consecutive days.</li> <li>For the next 4-week periods after your first application, you expect to receive no income at all for the whole period.</li> </ul> </li> </ul> ",
   "ei_sickness_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "ei_workshare.box1": "Receive EI benefits",
   "ei_workshare.box2": "Up to 76 weeks",
