updated the wrong cerb text ahhh

--- a/locales/en.json
+++ b/locales/en.json
@@ -29,7 +29,7 @@
   "cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
   "cerb.linktext": "Apply for CERB",
-  "cerb.preamble": "<strong>The Canada Emergency Response Benefit (CERB) can help if you:</strong><ul class='list-outside list-disc'><li>Did not leave your job voluntarily.</li> <li>Earned at least $5,000 in 2019 or the last 12 months.</li><li>Stopped working for at least 14 consecutive days because of COVID-19: <ul><li>In the first 4 weeks you apply for, you received no income for at least 14 consecutive days.</li><li>For the next 4-week periods after your first application, you expect to receive no income at all for the whole period.</li></ul></li></ul><strong>Good to know:</strong><ul class='list-outside list-disc'><li>Available from March 15 to October 3, 2020.</li><li>You’ll need to re-apply for each 4-week period you’re not working.</li><li>You’ll need to pay income tax on these payments in the future.</li> </ul>",
+  "cerb.preamble": "<strong>The Canada Emergency Response Benefit (CERB) can help if you:</strong><ul class='list-outside list-disc'><li>Did not leave your job voluntarily.</li> <li>Earned at least $5,000 in 2019 or the last 12 months.</li><li>Stopped working because of COVID-19: <ul><li>In the first 4 weeks you apply for, you received no income for at least 14 consecutive days.</li><li>For the next 4-week periods after your first application, you expect to receive no income at all for the whole period.</li></ul></li></ul><strong>Good to know:</strong><ul class='list-outside list-disc'><li>Available from March 15 to October 3, 2020.</li><li>You’ll need to re-apply for each 4-week period you’re not working.</li><li>You’ll need to pay income tax on these payments in the future.</li> </ul>",
   "ei_regular.box1": "55% of your income<span class='hide--mobile'>, </span><br class='hide--desktop' />paid every 2 weeks",
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
   "ei_regular.link": "https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html",
@@ -45,7 +45,7 @@
   "ei_sickness_cerb.box2": "Up to 4 months",
   "ei_sickness_cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
   "ei_sickness_cerb.linktext": "Apply for EI Sickness Benefits and CERB",
-  "ei_sickness_cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you:</p><ul><li>Stopped working because of COVID—19.</li><li>Earned at least $5,000 in 2019 or the last 12 months.</li></ul><p>If you’re eligible for both EI  Sickness Benefits and CERB, you will receive CERB for the first 4 months you’re off work. Then you’ll automatically start receiving EI Sickness Benefits after, if you’re still not working.</p>",
+  "ei_sickness_cerb.preamble": "<p>The Canada Emergency Response Benefit (CERB) can help if you:</p><ul><li>Stopped working for at least 14 consecutive days because of COVID—19.</li><li>Earned at least $5,000 in 2019 or the last 12 months.</li></ul><p>If you’re eligible for both EI  Sickness Benefits and CERB, you will receive CERB for the first 4 months you’re off work. Then you’ll automatically start receiving EI Sickness Benefits after, if you’re still not working.</p>",
   "ei_sickness_cerb.header": "Apply for both CERB and Employment Insurance (EI) Sickness Benefits",
   "ei_workshare.box1": "Receive EI benefits",
   "ei_workshare.box2": "Up to 76 weeks",
