--- a/locales/en.json
+++ b/locales/en.json
@@ -156,5 +156,14 @@
   "some_income.title": "Your Situation",
   "results.other_potential_help": "Other potential help",
   "results.other_potential_help.preamble": "The following help is available as well:",
-  "unchanged_income.title": "Your situation"
+  "unchanged_income.title": "Your situation",
+  "feedback.button": "Report a problem or mistake on this page",
+  "feedback.question": "Check all the issues that apply",
+  "feeback.1": "Incorrect information",
+  "feedback.2": "Confusing or unclear information",
+  "feedback.3": "You didn't find what you were looking for",
+  "feedback.4": "Page does not work with your adaptive technologies",
+  "feedback.5": "You're worried about your privacy",
+  "feedback.6": "Other",
+  "feedback.submit": "Submit"
 }
