--- a/locales/fr.json
+++ b/locales/fr.json
@@ -59,7 +59,7 @@
   "footer.link1.desc": "Politique de Confidentialité",
   "footer.link2": "https://numerique.canada.ca/transparence/avis/",
   "footer.link2.desc": "Avis",
-  "form.ccb": false,
+  "form.ccb": "Recevez-vous l’Allocation canadienne pour enfants?",
   "form.gross_income": "Quel est votre revenu total (avant taxes) en 2019 ou des 12 dernier mois ?",
   "form.lost_job": "Choisissez la situation qui vous décrit le mieux",
   "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
