--- a/locales/en.json
+++ b/locales/en.json
@@ -159,7 +159,7 @@
   "unchanged_income.title": "Your situation",
   "feedback.button": "Report a problem or mistake on this page",
   "feedback.question": "Check all the issues that apply",
-  "feeback.1": "Incorrect information",
+  "feedback.1": "Incorrect information",
   "feedback.2": "Confusing or unclear information",
   "feedback.3": "You didn't find what you were looking for",
   "feedback.4": "Page does not work with your adaptive technologies",
