--- a/locales/en.json
+++ b/locales/en.json
@@ -34,18 +34,18 @@
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
   "ei_regular.link": "https://www.canada.ca/en/services/benefits/ei/ei-regular-benefit/apply.html",
   "ei_regular.linktext": "Apply for EI Regular Benefits",
-  "ei_regular.preamble": "<strong>EI can help if you:</p><ul class='list-disc list-outside'><li>Paid into EI, usually through your employer. Check your pay stub to see if you have EI deductions.</li><li>Worked the minimum number of “insurable hours.”</li></ul><strong>Good to know:</strong><ul><li>Even if you left your job voluntarily for your health needs during COVID—19, you may still be eligible for EI.</li><li>The number of weeks you get paid depends on how many “insurable hours” you worked in the last 52 weeks.</li></ul>",
+  "ei_regular.preamble": "<strong>EI can help if you:</p><ul class='list-disc list-outside'><li>Paid into EI, usually through your employer. Check your pay stub to see if you have EI deductions.</li><li>Worked the minimum number of “insurable hours.”</li></ul><strong>Good to know:</strong><ul><li>Even if you left your job voluntarily for your health needs during COVID-19, you may still be eligible for EI.</li><li>The number of weeks you get paid depends on how many “insurable hours” you worked in the last 52 weeks.</li></ul>",
   "ei_regular_and_cerb.box1": "$2,000 for the first 4 weeks",
   "ei_regular_and_cerb.box2": "$1,000 every 2 weeks after that",
   "ei_regular_and_cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
   "ei_regular_and_cerb.linktext": "Apply for CERB",
-  "ei_regular_and_cerb.preamble": " <p><strong>The benefit can help if you:</strong></p> <ul class='list-disc list-outside'> <li> Did not leave your job voluntarily. </li> <li>Earned at least $5,000 in 2019 or the last 12 months.</li> <li>Stopped working because of COVID—19: <ul class='list-disc list-outside'> <li>In the first 4 weeks you apply for, you received no income for at least 14 consecutive days.</li> <li>For the next 4-week periods after your first application, you expect to receive no income at all for the whole period.</li> </ul> </li> </ul> <p><strong>Good to know:</strong></p> <ul class='list-disc list-outside'> <li>You’ll need to re-apply for CERB for each 4-week period you’re not working</li> </ul> ",
+  "ei_regular_and_cerb.preamble": " <p><strong>The benefit can help if you:</strong></p> <ul class='list-disc list-outside'> <li> Did not leave your job voluntarily. </li> <li>Earned at least $5,000 in 2019 or the last 12 months.</li> <li>Stopped working because of COVID-19: <ul class='list-disc list-outside'> <li>In the first 4 weeks you apply for, you received no income for at least 14 consecutive days.</li> <li>For the next 4-week periods after your first application, you expect to receive no income at all for the whole period.</li> </ul> </li> </ul> <p><strong>Good to know:</strong></p> <ul class='list-disc list-outside'> <li>You’ll need to re-apply for CERB for each 4-week period you’re not working</li> </ul> ",
   "ei_regular_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "ei_sickness_cerb.box1": "$2,000 for the first 4 weeks",
   "ei_sickness_cerb.box2": "$1,000 every 2 weeks after that",
   "ei_sickness_cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
   "ei_sickness_cerb.linktext": "Apply for CERB",
-  "ei_sickness_cerb.preamble": " <p><strong>The benefit can help if you:</strong></p> <ul class='list-disc list-outside'> <li> Did not leave your job voluntarily. </li> <li>Earned at least $5,000 in 2019 or the last 12 months.</li> <li>Stopped working because of COVID—19: <ul class='list-disc list-outside'> <li>In the first 4 weeks you apply for, you received no income for at least 14 consecutive days.</li> <li>For the next 4-week periods after your first application, you expect to receive no income at all for the whole period.</li> </ul> </li> </ul> ",
+  "ei_sickness_cerb.preamble": " <p><strong>The benefit can help if you:</strong></p> <ul class='list-disc list-outside'> <li> Did not leave your job voluntarily. </li> <li>Earned at least $5,000 in 2019 or the last 12 months.</li> <li>Stopped working because of COVID-19: <ul class='list-disc list-outside'> <li>In the first 4 weeks you apply for, you received no income for at least 14 consecutive days.</li> <li>For the next 4-week periods after your first application, you expect to receive no income at all for the whole period.</li> </ul> </li> </ul> ",
   "ei_sickness_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "ei_workshare.box1": "Receive EI benefits",
   "ei_workshare.box2": "Up to 76 weeks",
@@ -136,7 +136,7 @@
   "your_situation.no_income.5": "You were on Employment Insurance in the last 12 months and your claim has ended.",
   "your_situation.no_income.6": "You left your job due to unsafe conditions for your health.",
   "your_situation.no_income.7": "You’re sick or in mandatory quarantine and on unpaid leave.",
-  "your_situation.some_income.1": "Your hours have been reduced due to COVID‑19.",
+  "your_situation.some_income.1": "Your hours have been reduced due to COVID-19.",
   "your_situation.some_income.2": "You’re retired and lost your part-time work.",
   "your_situation.some_income.3": "You’ve lost one of your income streams but you still have some paid work.",
   "your_situation.some_income.4": "You’re sick or in mandatory quarantine and on unpaid leave.",
