add missing RRIF french strings

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -63,7 +63,7 @@
   "form.gross_income": "Quel est votre revenu total (avant taxes) en 2019 ou des 12 dernier mois ?",
   "form.lost_job": "Choisissez la situation qui vous décrit le mieux",
   "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
-  "form.rrif": "form.rrif",
+  "form.rrif": "Possédez vous un fond enregistré de revenu de retraite?",
   "form.student_debt": "Devez vous payer une dette d’étude au gouvernement?",
   "form.your_situation.no_income": "Choisissez la situation qui vous décrit le mieux.",
   "form.your_situation.some_income": "Choisissez la situation qui vous décrit le mieux.",
@@ -102,12 +102,13 @@
   "results.no_cerb.preamble": "Pour l’instant, les gens qui ont perdu une portion de leur revenu, et non l’entièreté de leur revenu ne sont pas couverts par la Prestation canadienne d’urgence (PCU). De nouvelles prestations sont constamment créées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil dans une semaine ou deux.",
   "results_title_no_results": "Revenez voir dans quelques semaines",
   "results.no_results.preamble": "Aucune prestation actuelle ne s’applique à votre situation. Nous ajoutons les prestations au fur et à mesure qu’elles sont annoncées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil plus tard, ou si votre situation change.",
-  "rrif.1": "rrif.1",
-  "rrif.2": "rrif.2",
+  "rrif.1": "Oui.",
+  "rrif.2": "Non.",
   "rrif.header": "Diminution du montant de retrait obligatoire de votre fond enregistré de revenu de retraite",
   "rrif.link": "https://www.canada.ca/fr/agence-revenu/services/impot/particuliers/sujets/fonds-enregistre-revenu-retraite-ferr.html",
   "rrif.linktext": "Contactez votre banque pour plus de détails",
   "rrif.preamble": "<ul class='list-disc list-outside'><li>Le montant obligatoire que vous devrez retirer de votre fond enregistré de revenu de retraire en 2020 sera 25% plus bas afin que vous puissiez économiser. </li></ul>",
+  "rrif.title": "FERR",
   "start.intro.1": "Answer some questions to find out about financial help.",
   "start.intro.banner.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get an emergency loan from the government.",
   "start.intro.banner.2": "Details are available online.",
