--- a/locales/en.json
+++ b/locales/en.json
@@ -21,18 +21,9 @@
   "cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
   "ei_regular_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
-  "ei_sickness_cerb.box1": "$2,000 for the first 4 weeks",
-  "ei_sickness_cerb.box2": "$1,000 every 2 weeks after that",
-  "ei_sickness_cerb.link": "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
-  "ei_sickness_cerb.linktext": "Apply for CERB",
-  "ei_sickness_cerb.preamble": " <p><strong>The benefit can help if you:</strong></p> <ul class='list-disc list-outside'> <li> Did not leave your job voluntarily. </li> <li>Earned at least $5,000 in 2019 or the last 12 months.</li> <li>Stopped working because of COVID—19: <ul class='list-disc list-outside'> <li>In the first 4 weeks you apply for, you received no income for at least 14 consecutive days.</li> <li>For the next 4-week periods after your first application, you expect to receive no income at all for the whole period.</li> </ul> </li> </ul> ",
   "ei_sickness_cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
-  "ei_workshare.box1": "Receive EI benefits",
-  "ei_workshare.box2": "Up to 76 weeks",
   "ei_workshare.header": "Talk to your employer and coworkers about Employment Insurance (EI) Work-Sharing ",
-  "ei_workshare.link": "https://www.canada.ca/en/employment-social-development/corporate/notices/coronavirus.html#h4.02",
-  "ei_workshare.linktext": "Learn more about EI Work-Sharing",
-  "ei_workshare.preamble": "<p>The benefit can help if:</p><ul class='list-disc list-outside'><li>Your hours have been reduced by 10 to 60% because of COVID-19</li></ul><p>To do this:</p><ul class='list-disc list-outside'><li>You would enter into an agreement with your employer and other coworkers who do the exact same work as you.</li><li> All employees who do the same work need to agree to share the work equally, and your employer has to agree as well. </li></ul>",
+  "ei_workshare.preamble": "",
   "errors.multipleChoiceGeneric": "You must select one of the options listed below",
   "feedback": "Feedback",
   "footer.link1": "https://digital.canada.ca/legal/privacy/",
@@ -79,9 +70,6 @@
   "rrif.1": "Yes.",
   "rrif.2": "No.",
   "rrif.header": "Lower mandatory withdrawals for your Registered Retirement Income Fund (RRIF)",
-  "rrif.link": "https://www.canada.ca/en/revenue-agency/services/tax/individuals/topics/registered-retirement-income-fund-rrif.html",
-  "rrif.linktext": "Contact your bank for more details",
-  "rrif.preamble": "<ul class='list-disc list-outside'><li>The mandatory amount you need to withdraw from your RRIF in 2020 will be 25% lower so you can save more money. </li></ul>",
   "rrif.title": "RRIF",
   "start.intro.1": "Answer some questions to find out about financial help.",
   "start.intro.2": "Your answers do not impact your eligibility. See our <a href='https://digital.canada.ca/legal/privacy/' target='_blank'>Privacy policy</a> and <a href='https://digital.canada.ca/legal/terms/' target='_blank'>Terms and conditions</a> for more information. ",
@@ -90,12 +78,7 @@
   "start_over": "Start over",
   "student_debt.1": "Yes.",
   "student_debt.2": "No.",
-  "student_loan.box1": "Payments automatically paused",
-  "student_loan.box2": "From March 30, 2020 until September 30, 2020",
   "student_loan.header": "No student loan payments for 6 months",
-  "student_loan.link": "https://www.csnpe-nslsc.canada.ca/en/home",
-  "student_loan.linktext": "Learn more about help with student loan payments",
-  "student_loan.preamble": "<p>Good to know:</p><ul class='list-disc list-outside'><li>You don’t need to apply to pause your payments.</li><li> Pre-authorized payments are stopped.</li><li> Log in to your <a href='https://www.csnpe-nslsc.canada.ca/en/home' target='_blank'>National Student Loans Service Centre</a> account to see how much you will save</li></ul>",
   "wordmark.alt": "Symbol of the Government of Canada",
   "your_situation.no_income.1": "You lost your job or your employer closed.",
   "your_situation.no_income.2": "You’re self-employed and have no income.",
