update start page text

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -65,12 +65,12 @@
   "rrif.linktext": "Contactez votre banque pour plus de détails",
   "rrif.preamble": "<ul class='list-disc list-outside'><li>Le montant obligatoire que vous devrez retirer de votre fond enregistré de revenu de retraire en 2020 sera 25% plus bas afin que vous puissiez économiser. </li></ul>",
   "rrif.title": "FERR",
-  "start.intro.1": "Answer some questions to find out about financial help.",
+  "start.intro.1": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous. Nous ne pouvons garantir vorte admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
   "start.intro.banner.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get an emergency loan from the government.",
   "start.intro.banner.2": "Details are available online.",
   "student_debt.1": "Oui.",
   "student_debt.2": "Non.",
-  "start.intro.2": "Vos réponses n’influenceront pas votre admissibilité. Consultez notre <a href='https://numerique.canada.ca/transparence/confidentialite/' target='_blank'>Politique de confidentialité</a> et <a href='https://numerique.canada.ca/transparence/avis/' target='_blank'>l’Avis</a> pour en savoir plus.",
+  "start.intro.2": "De nouvelles prestations sont constamment créées et nous travaillons à les inclure aussitôt que possible.",
   "start.submit": "Commencer",
   "start.title": "Trouver de l’aide financière pendant la COVID-19",
   "start_over": "Recommencer",
@@ -94,7 +94,6 @@
   "ccb.title": "Allocation canadienne pour enfants",
   "student_debt.title": "Dette d’études",
   "start.lastupdated": "Dernière mise à jour le 16 avril 2020",
-  "start.intro.3": "Ce service ne fait que suggérer des programmes fédéraux pour l’instant. De nouvelles prestations sont constamment créées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil afin de voir quelles nouvelles prestations s’appliquent à vous.",
   "start.details.summary": "Êtes vous un Canadien actuellement à l’étranger?",
   "start.details.p.1": "Si vous êtes un Canadien actuellement à l’étranger et que vous avez besoin d’aide financière pour revenir au Canada, vous pouvez demander <a href='https://voyage.gc.ca/assistance/info-d-urgence/assistance-financiere/covid-19-aide-financiere' target='_blank'>un prêt d’urgence</a>.",
   "lost_job.title": "Perte de revenu en lien avec la COVID-19",
