--- a/locales/en.json
+++ b/locales/en.json
@@ -64,8 +64,7 @@
   "rrif.2": "No.",
   "rrif.header": "Lower mandatory withdrawals for your Registered Retirement Income Fund (RRIF)",
   "rrif.title": "RRIF",
-  "start.intro.1": "Answer some questions to find out about financial help.",
-  "start.intro.2": "Your answers do not impact your eligibility. See our <a href='https://digital.canada.ca/legal/privacy/' target='_blank'>Privacy policy</a> and <a href='https://digital.canada.ca/legal/terms/' target='_blank'>Terms and conditions</a> for more information. ",
+  "start.intro.1": "Answer some questions to find which federal programs can help you. We cannot guarantee your eligibility, but we can point you to the program details.",
   "start.submit": "Start now",
   "start.title": "Find financial help during COVID-19",
   "start_over": "Start over",
@@ -91,7 +90,7 @@
   "ccb.title": "Canada Child Benefit",
   "student_debt.title": "Student loans",
   "start.lastupdated": "Last updated April 16, 2020",
-  "start.intro.3": "This tool only suggests federal programs at this time. New benefits are still being created, and we are working to include them as soon as possible. You may want to check back again.",
+  "start.intro.2": "New measures are still being announced, and we’re working to include them as quickly as possible.",
   "start.details.summary": "Are you a Canadian stuck abroad?",
   "start.details.p.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get <a href='https://travel.gc.ca/assistance/emergency-info/financial-assistance/covid-19-financial-help' target='_blank'>an emergency loan</a>.",
   "lost_job.title": "Lost income due to COVID-19",
