--- a/locales/fr.json
+++ b/locales/fr.json
@@ -40,7 +40,7 @@
   "form.your_situation.unchanged_income": "Choisissez la situation qui vous décrit le mieux.",
   "gross_income.1": "4999 $ ou moins.",
   "gross_income.2": "5000 $ ou plus.",
-  "gst_credit.header": "Argent supplémentaire grâce au crédit pour la TPS/TVH",
+  "gst_credit.header": "Argent supplémentaire grâce au crédit pour la TPS",
   "lost_job.1": "Vous avez perdu votre revenu en entier.",
   "lost_job.2": "Vous avez perdu une partie de votre revenu.",
   "lost_job.3": "Votre revenu n’est pas affecté par la COVID-19.",
