--- a/locales/fr.json
+++ b/locales/fr.json
@@ -79,10 +79,9 @@
   "your_situation.no_income.1": "Vous avez perdu votre emploi et votre employeur a cessé ses activités.",
   "your_situation.no_income.2": "Vous êtes travailleur autonome et n’avez aucun revenu.",
   "your_situation.no_income.3": "Vous êtes en congé sans solde pour prendre soin d’un enfant ou d’un proche malade.",
-  "your_situation.no_income.4": "Vous étiez récemment en congé parental, mais ne pouvez pas retrourner travailler en raison de la COVID-19.",
-  "your_situation.no_income.5": "Vous receviez l’assurance-emploi depuis les 12 derniers mois et votre prestation est terminée.",
-  "your_situation.no_income.6": "Vous avez quitté votre emploi car les conditions de travail n’étaient pas sécuritaires pour votre santé.",
-  "your_situation.no_income.7": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
+  "your_situation.no_income.4": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
+  "your_situation.no_income.5": "Vous étiez récemment en congé parental, mais ne pouvez pas retourner travailler en raison de la COVID-19.",
+  "your_situation.no_income.6": "Vous receviez l’assurance-emploi depuis les 12 derniers mois et votre prestation est terminée.",
   "your_situation.some_income.1": "Votre horaire de travail a diminué en raison de la COVID-19.",
   "your_situation.some_income.2": "Vous êtes retraité et avez perdu un emploi à temps partiel.",
   "your_situation.some_income.3": "Vous avez perdu un de vos revenu, mais avez toujours un revenu secondaire.",
