--- a/locales/fr.json
+++ b/locales/fr.json
@@ -52,9 +52,11 @@
   "rent_help.header": "Dans la majorité des provinces et territoires, vous ne pouvez pas être expulsé pour ne pas avoir payé votre loyer",
   "required": "(obligatoire)",
   "results.header_text": "Selon les informations que vous nous avez fournies, l’aide suivante est possible :",
+  "results.eligibility_warning": "Ces résuyltats <strong>ne garantissent pas votre admissibilité</strong>. Lisez attentivement les détails avant d’appliquer.",
+  "results.situation_changes": "Si votre situation change, vous pouvez répondre aux questions à nouveau pour trouver de nouveaux programmes d’aide.",
   "results_title": {
-    "one": "%s programme d’aide pour vous",
-    "other": "%s programmes d’aide pour vous"
+    "one": "%s programme pour vous aider",
+    "other": "%s programmes pour vous aider"
   },
   "results_title_no_results": "Revenez voir dans quelques semaines",
   "results.no_results.preamble": "Aucune prestation actuelle ne s’applique à votre situation. Nous ajoutons les prestations au fur et à mesure qu’elles sont annoncées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil plus tard, ou si votre situation change.",
@@ -103,7 +105,7 @@
   "no_income.title": "Votre situation",
   "unchanged_income.title": "Votre situation",
   "gross_income.title": "Votre revenu",
-  "results.banner": "Erreur : Vous n’avez pas répondu à quelques questions. <a href='/clear'>Recommencez</a> pour recevoir vos résultats complets.",
+  "results.banner": "Vous n’avez pas répondu à quelques questions. <a href='/clear'>Recommencez</a> pour recevoir vos résultats complets.",
   "feedback.button": "Signaler un problème ou une erreur sur cette page",
   "feedback.question": "Cochez tous les problèmes qui s’appliquent.",
   "feedback.1": "L’information sur cette page est incorrecte",
