Update the options on some-income Update the schema to add new part-time option Also change employed option to selfemployed, to make clear going forward (and update everywhere that's referenced)

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -82,10 +82,11 @@
   "your_situation.no_income.4": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
   "your_situation.no_income.5": "Vous étiez récemment en congé parental, mais ne pouvez pas retourner travailler en raison de la COVID-19.",
   "your_situation.no_income.6": "Vous receviez l’assurance-emploi depuis les 12 derniers mois et votre prestation est terminée.",
-  "your_situation.some_income.1": "Votre horaire de travail a diminué en raison de la COVID-19.",
-  "your_situation.some_income.2": "Vous êtes retraité et avez perdu un emploi à temps partiel.",
-  "your_situation.some_income.3": "Vous avez perdu un de vos revenu, mais avez toujours un revenu secondaire.",
-  "your_situation.some_income.4": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
+  "your_situation.some_income.1": "Votre employeur a réduit votre horaire de travail en raison de la COVID-19.",
+  "your_situation.some_income.2": "Vous avez perdu un ou deux de vos emplois à temps partiel, mais avez toujours un revenu additionnel.",
+  "your_situation.some_income.3": "Vous êtes travailleur autonome et avez perdu une partie de votre revenu, mais vous avez toujours un peu de travail rémunéré.",
+  "your_situation.some_income.4": "Vous êtes retraité et avez perdu un emploi à temps partiel.",
+  "your_situation.some_income.5": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
   "your_situation.unchanged_income.1": "Vous faites du télétravail.",
   "your_situation.unchanged_income.2": "Vous êtes en congé payé.",
   "your_situation.unchanged_income.3": "Vous êtes retraité.",
