add date to no-income option with non-breaking space

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -81,7 +81,7 @@
   "your_situation.no_income.3": "Vous êtes en congé sans solde pour prendre soin d’un enfant ou d’un proche malade.",
   "your_situation.no_income.4": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
   "your_situation.no_income.5": "Vous étiez récemment en congé parental, mais ne pouvez pas retourner travailler en raison de la COVID-19.",
-  "your_situation.no_income.6": "Vous receviez l’assurance-emploi depuis les 12 derniers mois et votre prestation est terminée.",
+  "your_situation.no_income.6": "Vous receviez l’assurance-emploi et votre prestation s’est terminée après le 29\u00A0décembre\u00A02019.",
   "your_situation.some_income.1": "Votre employeur a réduit votre horaire de travail en raison de la COVID-19.",
   "your_situation.some_income.2": "Vous avez perdu un ou deux de vos emplois à temps partiel, mais avez toujours un revenu additionnel.",
   "your_situation.some_income.3": "Vous êtes travailleur autonome et avez perdu une partie de votre revenu, mais vous avez toujours un peu de travail rémunéré.",
