fix all typos recorded in issue

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -23,10 +23,10 @@
   "ei_regular_cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "ei_sickness_cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "ei_workshare.header": "Parlez à votre employeur et à vos collègues du programme Travail partagé de l’assurance-emploi",
-  "errors.multipleChoiceGeneric": "Vous devez choisir une option ci dessous",
+  "errors.multipleChoiceGeneric": "Vous devez choisir une option ci-dessous",
   "feedback": "Feedback",
   "footer.link1": "https://numerique.canada.ca/transparence/confidentialite/",
-  "footer.link1.desc": "Politique de Confidentialité",
+  "footer.link1.desc": "Politique de confidentialité",
   "footer.link2": "https://numerique.canada.ca/transparence/avis/",
   "footer.link2.desc": "Avis",
   "form.ccb": "Recevez-vous l’Allocation canadienne pour enfants?",
@@ -52,7 +52,7 @@
   "rent_help.header": "Dans la majorité des provinces et territoires, vous ne pouvez pas être expulsé pour ne pas avoir payé votre loyer",
   "required": "(obligatoire)",
   "results.header_text": "Selon les informations que vous nous avez fournies, l’aide suivante est possible :",
-  "results.eligibility_warning": "Ces résuyltats <strong>ne garantissent pas votre admissibilité</strong>. Lisez attentivement les détails avant d’appliquer.",
+  "results.eligibility_warning": "Ces résultats <strong>ne garantissent pas votre admissibilité</strong>. Lisez attentivement les détails avant d’appliquer.",
   "results.situation_changes": "Si votre situation change, vous pouvez répondre aux questions à nouveau pour trouver de nouveaux programmes d’aide.",
   "results_title": {
     "one": "%s programme pour vous aider",
@@ -67,7 +67,7 @@
   "rrif.linktext": "Contactez votre banque pour plus de détails",
   "rrif.preamble": "<ul class='list-disc list-outside'><li>Le montant obligatoire que vous devrez retirer de votre fond enregistré de revenu de retraire en 2020 sera 25% plus bas afin que vous puissiez économiser. </li></ul>",
   "rrif.title": "FERR",
-  "start.intro.1": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous. Nous ne pouvons garantir vorte admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
+  "start.intro.1": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous. Nous ne pouvons garantir votre admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
   "start.intro.banner.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get an emergency loan from the government.",
   "start.intro.banner.2": "Details are available online.",
   "student_debt.1": "Oui.",
@@ -78,7 +78,7 @@
   "start_over": "Recommencer",
   "student_loan.header": "Arrêt des paiements de votre dette d’étude pendant 6 mois",
   "wordmark.alt": "Symbole du gouvernement du Canada",
-  "your_situation.no_income.1": "Vous avez perdu votre emploi et votre employeur a cessé ses activités.",
+  "your_situation.no_income.1": "Vous avez perdu votre emploi ou votre employeur a cessé ses activités.",
   "your_situation.no_income.2": "Vous êtes travailleur autonome et n’avez aucun revenu.",
   "your_situation.no_income.3": "Vous êtes en congé sans solde pour prendre soin d’un enfant ou d’un proche malade.",
   "your_situation.no_income.4": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
@@ -96,7 +96,7 @@
   "ccb.title": "Allocation canadienne pour enfants",
   "student_debt.title": "Dette d’études",
   "start.lastupdated": "Dernière mise à jour le 20 avril 2020",
-  "start.details.summary": "Êtes vous un Canadien actuellement à l’étranger?",
+  "start.details.summary": "Êtes-vous un Canadien actuellement à l’étranger?",
   "start.details.p.1": "Si vous êtes un Canadien actuellement à l’étranger et que vous avez besoin d’aide financière pour revenir au Canada, vous pouvez demander <a href='https://voyage.gc.ca/assistance/info-d-urgence/assistance-financiere/covid-19-aide-financiere' target='_blank'>un prêt d’urgence</a>.",
   "lost_job.title": "Perte de revenu en lien avec la COVID-19",
   "results.other_potential_help": "Aide supplémentaire disponible",
