--- a/locales/en.json
+++ b/locales/en.json
@@ -96,8 +96,8 @@
   "start.details.summary": "Are you a Canadian stuck abroad?",
   "start.details.p.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get <a href='https://travel.gc.ca/assistance/emergency-info/financial-assistance/covid-19-financial-help' target='_blank'>an emergency loan</a>.",
   "lost_job.title": "Lost income due to COVID-19",
-  "no_income.title": "Your Situation",
-  "some_income.title": "Your Situation",
+  "no_income.title": "Your situation",
+  "some_income.title": "Your situation",
   "results.other_potential_help": "Other potential help",
   "results.other_potential_help.preamble": "The following help is available as well:",
   "unchanged_income.title": "Your situation",
