update date and text

--- a/locales/en.json
+++ b/locales/en.json
@@ -92,8 +92,8 @@
   "ccb.title": "Canada Child Benefit",
   "student_debt.title": "Student loans",
   "start.lastupdated": "Last updated",
-  "start.intro.3": "This tool only suggests federal programs at this time. New benefits are still being created, and we are working to include them as soon as possible. You may want to check back again.",
-  "start.intro.2": "New measures are still being announced, and we’re working to include them as quickly as possible.",
+  "start.intro.3": "New measures are still being announced, and we’re working to include them as quickly as possible.",
+  "start.intro.2": "Answer some questions to find which federal programs can help you. We cannot guarantee your eligibility, but we can point you to the program details.",
   "start.details.summary": "Are you a Canadian stuck abroad?",
   "start.details.p.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get <a href='https://travel.gc.ca/assistance/emergency-info/financial-assistance/covid-19-financial-help' target='_blank'>an emergency loan</a>.",
   "lost_job.title": "Lost income due to COVID-19",
