--- a/locales/fr.json
+++ b/locales/fr.json
@@ -72,7 +72,7 @@
   "start.intro.banner.2": "Details are available online.",
   "student_debt.1": "Oui.",
   "student_debt.2": "Non.",
-  "start.intro.2": "De nouvelles prestations sont constamment créées et nous travaillons à les inclure aussitôt que possible.",
+  "start.intro.2": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous. Nous ne pouvons garantir vorte admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
   "start.submit": "Commencer",
   "start.title": "Trouver de l’aide financière pendant la COVID-19",
   "start_over": "Recommencer",
@@ -96,7 +96,7 @@
   "ccb.title": "Allocation canadienne pour enfants",
   "student_debt.title": "Dette d’études",
   "start.lastupdated": "Dernière mise à jour le",
-  "start.intro.3": "Ce service ne fait que suggérer des programmes fédéraux pour l’instant. De nouvelles prestations sont constamment créées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil afin de voir quelles nouvelles prestations s’appliquent à vous.",
+  "start.intro.3": "De nouvelles prestations sont constamment créées et nous travaillons à les inclure aussitôt que possible.",
   "start.details.summary": "Êtes vous un Canadien actuellement à l’étranger?",
   "start.details.p.1": "Si vous êtes un Canadien actuellement à l’étranger et que vous avez besoin d’aide financière pour revenir au Canada, vous pouvez demander <a href='https://voyage.gc.ca/assistance/info-d-urgence/assistance-financiere/covid-19-aide-financiere' target='_blank'>un prêt d’urgence</a>.",
   "lost_job.title": "Perte de revenu en lien avec la COVID-19",
