bit of locale file cleanup

--- a/locales/en.json
+++ b/locales/en.json
@@ -17,6 +17,7 @@
   "ccb.2": "No.",
   "ccb.3": "You’re not sure.",
   "ccb.hint": "Check your bank account to find out if you’ve been receiving the Canada Child Benefit. <a href='https://www.canada.ca/en/revenue-agency/services/child-family-benefits/benefit-payment-dates.htmlk'>Dates of payments are available.</a> ",
+  "ccb.title": "Canada Child Benefit",
   "ccb_payment.header": "Extra payment from Canada Child Benefit",
   "cerb.header": "Apply for the Canada Emergency Response Benefit (CERB)",
   "ei_regular.header": "Apply for Employment Insurance (EI) Regular Benefits",
@@ -25,6 +26,18 @@
   "ei_workshare.header": "Talk to your employer and coworkers about Employment Insurance (EI) Work-Sharing ",
   "errors.multipleChoiceGeneric": "You must select one of the options listed below",
   "feedback": "Feedback",
+  "feedback-thanks.text": "Thank you for your feedback.",
+  "feedback-thanks.title": "Thanks!",
+  "feedback.1": "Incorrect information",
+  "feedback.2": "Confusing or unclear information",
+  "feedback.3": "You didn't find what you were looking for",
+  "feedback.4": "Page does not work with your adaptive technologies",
+  "feedback.5": "You're worried about your privacy",
+  "feedback.6": "Other",
+  "feedback.button": "Report a problem or mistake on this page",
+  "feedback.question": "Check all the issues that apply",
+  "feedback.submit": "Submit",
+  "feedback.thanks": "Thank you for your feedback.",
   "footer.link1": "https://digital.canada.ca/legal/privacy/",
   "footer.link1.desc": "Privacy policy",
   "footer.link2": "https://digital.canada.ca/legal/terms/",
@@ -33,6 +46,7 @@
   "form.gross_income": "How much total income before taxes did you earn from paid work in 2019 or the last 12 months?",
   "form.lost_job": "Choose the description that best fits your situation",
   "form.mortgage_payments": "Are you worried about making mortgage or rent payments?",
+  "form.reduced_income": "How much do you expect to earn per month now?",
   "form.rrif": "Do you have a Registered Retirement Income Fund (RRIF)?",
   "form.student_debt": "Do you have student loans you owe the government?",
   "form.your_situation.no_income": "Choose the description that best fits your situation",
@@ -45,41 +59,57 @@
   "lost_job.1": "All your income has stopped.",
   "lost_job.2": "Some of your income has stopped.",
   "lost_job.3": "Your income is not affected by COVID-19.",
+  "lost_job.title": "Lost income due to COVID-19",
   "mortgage_deferral.header": "Contact your bank to delay mortgage payments",
   "mortgage_payments.1": "Yes, you’re worried about your mortgage.",
   "mortgage_payments.2": "Yes, you’re worried about your rent.",
   "mortgage_payments.3": "No, you’re not worried at this time.",
+  "mortgage_payments.title": "Your housing",
+  "no_income.title": "Your situation",
   "phase.desc": "This site will change as we test ideas.",
+  "reduced_income.1": "$1,000 or less.",
+  "reduced_income.2": "$1,001 or more.",
+  "reduced_income.title": "Your reduced income",
   "rent_help.header": "In most provinces and territories, you cannot be evicted for not paying rent",
   "required": "(required)",
   "results.banner": "You missed a couple questions at the beginning. <a href='/clear'>Start over</a> to get your full results.",
   "results.eligibility_warning": "These results <strong>do not guarantee your eligibility</strong>. Read the details we link to before applying.",
-  "results.situation_changes": "If your situation changes, you can answer the questions again to get new programs.",
   "results.header_text": "Based on what you’ve told us, the following help is available:",
+  "results.no_results.preamble": "Your situation does not match any of the benefits included here at the moment. We’re working to add more programs, so you may want to check back in a few weeks or if your situation changes.",
+  "results.other_potential_help": "Other potential help",
+  "results.other_potential_help.preamble": "The following help is available as well:",
+  "results.situation_changes": "If your situation changes, you can answer the questions again to get new programs.",
   "results_title": {
     "one": "%s way to get help",
     "other": "%s ways to get help"
   },
   "results_title_no_results": "Check back in a few weeks",
-  "results.no_results.preamble": "Your situation does not match any of the benefits included here at the moment. We’re working to add more programs, so you may want to check back in a few weeks or if your situation changes.",
   "rrif.1": "Yes.",
   "rrif.2": "No.",
   "rrif.header": "Lower mandatory withdrawals for your Registered Retirement Income Fund (RRIF)",
   "rrif.title": "RRIF",
+  "some_income.title": "Your situation",
+  "start.details.p.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get <a href='https://travel.gc.ca/assistance/emergency-info/financial-assistance/covid-19-financial-help' target='_blank'>an emergency loan</a>.",
+  "start.details.summary": "Are you a Canadian stuck abroad?",
   "start.intro.1": "Answer some questions to find which federal programs can help you. We cannot guarantee your eligibility, but we can point you to the program details.",
+  "start.intro.2": "Answer some questions to find which federal programs can help you. We cannot guarantee your eligibility, but we can point you to the program details.",
+  "start.intro.3": "New measures are still being announced, and we’re working to include them as quickly as possible.",
+  "start.lastupdated": "Last updated",
   "start.submit": "Start now",
   "start.title": "Find financial help during COVID-19",
   "start_over": "Start over",
   "student_debt.1": "Yes.",
   "student_debt.2": "No.",
+  "student_debt.title": "Student loans",
   "student_loan.header": "No student loan payments for 6 months",
+  "unchanged_income.title": "Your situation",
   "wordmark.alt": "Symbol of the Government of Canada",
   "your_situation.no_income.1": "You lost your job or your employer closed.",
   "your_situation.no_income.2": "You’re self-employed and have no income.",
   "your_situation.no_income.3": "You’re on unpaid leave to care for a child or sick person.",
   "your_situation.no_income.4": "You’re sick or in mandatory quarantine and on unpaid leave.",
   "your_situation.no_income.5": "You were on parental leave recently, but you cannot return to work due to COVID-19.",
-  "your_situation.no_income.6": "You were on Employment Insurance and your claim ended after December\u00A029,\u00A02019.",
+  "your_situation.no_income.6": "You were on Employment Insurance and your claim ended after December 29, 2019.",
   "your_situation.some_income.1": "Your employer has reduced your hours due to COVID-19.",
   "your_situation.some_income.2": "You’ve lost one or two part-time jobs and still have some income.",
   "your_situation.some_income.3": "You’re self-employed and lost some income but you still have some paid work.",
@@ -87,35 +117,5 @@
   "your_situation.some_income.5": "You’re sick or in mandatory quarantine and on unpaid leave.",
   "your_situation.unchanged_income.1": "You’re working from home.",
   "your_situation.unchanged_income.2": "You’re on paid leave.",
-  "your_situation.unchanged_income.3": "You’re retired.",
-  "mortgage_payments.title": "Your housing",
-  "ccb.title": "Canada Child Benefit",
-  "student_debt.title": "Student loans",
-  "start.lastupdated": "Last updated",
-  "start.intro.3": "New measures are still being announced, and we’re working to include them as quickly as possible.",
-  "start.intro.2": "Answer some questions to find which federal programs can help you. We cannot guarantee your eligibility, but we can point you to the program details.",
-  "start.details.summary": "Are you a Canadian stuck abroad?",
-  "start.details.p.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get <a href='https://travel.gc.ca/assistance/emergency-info/financial-assistance/covid-19-financial-help' target='_blank'>an emergency loan</a>.",
-  "lost_job.title": "Lost income due to COVID-19",
-  "no_income.title": "Your situation",
-  "some_income.title": "Your situation",
-  "results.other_potential_help": "Other potential help",
-  "results.other_potential_help.preamble": "The following help is available as well:",
-  "unchanged_income.title": "Your situation",
-  "feedback.button": "Report a problem or mistake on this page",
-  "feedback.question": "Check all the issues that apply",
-  "feedback.1": "Incorrect information",
-  "feedback.2": "Confusing or unclear information",
-  "feedback.3": "You didn't find what you were looking for",
-  "feedback.4": "Page does not work with your adaptive technologies",
-  "feedback.5": "You're worried about your privacy",
-  "feedback.6": "Other",
-  "feedback.submit": "Submit",
-  "feedback.thanks": "Thank you for your feedback.",
-  "reduced_income.title": "Your reduced income",
-  "reduced_income.1": "$1,000 or less.",
-  "reduced_income.2": "$1,001 or more.",
-  "form.reduced_income": "How much do you expect to earn per month now?",
-  "feedback-thanks.title": "Thanks!",
-  "feedback-thanks.text": "Thank you for your feedback."
+  "your_situation.unchanged_income.3": "You’re retired."
 }
