--- a/locales/fr.json
+++ b/locales/fr.json
@@ -17,6 +17,7 @@
   "ccb.2": "Non.",
   "ccb.3": "Vous n’êtes pas certain.",
   "ccb.hint": "Consultez vos relevés bancaires afin de déterminer si vous recevez l’Allocation canadienne pour enfants. <a href='https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/dates-versement-prestations.html'>Consultez les dates de versement des prestations.</a>",
+  "ccb.title": "Allocation canadienne pour enfants",
   "ccb_payment.header": "Paiements additionnels de l’Allocation canadienne pour enfants ",
   "cerb.header": "Présenter une demande pour la Prestation canadienne d’urgence (PCU)",
   "ei_regular.header": "Présenter une demande pour les prestations régulières de l’assurance-emploi (AE)",
@@ -25,6 +26,18 @@
   "ei_workshare.header": "Parlez à votre employeur et à vos collègues du programme Travail partagé de l’assurance-emploi",
   "errors.multipleChoiceGeneric": "Vous devez choisir une option ci-dessous",
   "feedback": "Feedback",
+  "feedback-thanks.text": "Merci de nous avoir aidés à améliorer le service!",
+  "feedback-thanks.title": "Merci!",
+  "feedback.1": "L’information sur cette page est incorrecte",
+  "feedback.2": "L’information sur cette page porte à confusion.",
+  "feedback.3": "Vous ne trouvez pas l’information dont vous avez besoin",
+  "feedback.4": "Cette page n’est pas compatible avec mon lecteur d’écran ou une autre technologie d’adaptation.",
+  "feedback.5": "Je m’inquiète de la manière dont mes renseignements pourraient être utilisés.",
+  "feedback.6": "Autre",
+  "feedback.button": "Signaler un problème ou une erreur sur cette page",
+  "feedback.question": "Cochez tous les problèmes qui s’appliquent.",
+  "feedback.submit": "Soumettre",
+  "feedback.thanks": "Merci de nous avoir aidés à améliorer le service!",
   "footer.link1": "https://numerique.canada.ca/transparence/confidentialite/",
   "footer.link1.desc": "Politique de confidentialité",
   "footer.link2": "https://numerique.canada.ca/transparence/avis/",
@@ -33,6 +46,7 @@
   "form.gross_income": "Quel est votre revenu total (avant taxes) en 2019 ou des 12 dernier mois ?",
   "form.lost_job": "Choisissez la situation qui vous décrit le mieux",
   "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
+  "form.reduced_income": "Combien de revenu anticipez-vous recevoir à chaque mois à partir de maintenant?",
   "form.rrif": "Possédez vous un fond enregistré de revenu de retraite?",
   "form.student_debt": "Devez vous payer une dette d’étude au gouvernement?",
   "form.your_situation.no_income": "Choisissez la situation qui vous décrit le mieux.",
@@ -40,50 +54,62 @@
   "form.your_situation.unchanged_income": "Choisissez la situation qui vous décrit le mieux.",
   "gross_income.1": "4999 $ ou moins.",
   "gross_income.2": "5000 $ ou plus.",
+  "gross_income.title": "Votre revenu",
   "gst_credit.header": "Argent supplémentaire grâce au crédit pour la TPS",
   "lost_job.1": "Vous avez perdu votre revenu en entier.",
   "lost_job.2": "Vous avez perdu une partie de votre revenu.",
   "lost_job.3": "Votre revenu n’est pas affecté par la COVID-19.",
+  "lost_job.title": "Perte de revenu en lien avec la COVID-19",
   "mortgage_deferral.header": "Contacter votre banque afin de repousser vos paiements d’hypothèque",
   "mortgage_payments.1": "Oui, vous êtes inquiet au sujet de votre hypothèque.",
   "mortgage_payments.2": "Oui, vous êtes inquiet au sujet de votre loyer.",
   "mortgage_payments.3": "Non, vous n’êtes pas inquiet en ce moment.",
+  "mortgage_payments.title": "Votre logement",
+  "no_income.title": "Votre situation",
   "phase.desc": "Ce site évoluera au fur et à mesure que nous testons des idées.",
+  "reduced_income.1": "1000 $ ou moins.",
+  "reduced_income.2": "1001 $ ou plus.",
+  "reduced_income.title": "Votre revenu partiel",
   "rent_help.header": "Dans la majorité des provinces et territoires, vous ne pouvez pas être expulsé pour ne pas avoir payé votre loyer",
   "required": "(obligatoire)",
-  "results.header_text": "Selon les informations que vous nous avez fournies, l’aide suivante est possible :",
+  "results.banner": "Vous n’avez pas répondu à quelques questions. <a href='/clear'>Recommencez</a> pour recevoir vos résultats complets.",
   "results.eligibility_warning": "Ces résultats <strong>ne garantissent pas votre admissibilité</strong>. Lisez attentivement les détails avant d’appliquer.",
+  "results.header_text": "Selon les informations que vous nous avez fournies, l’aide suivante est possible :",
+  "results.no_results.preamble": "Aucune prestation actuelle ne s’applique à votre situation. Nous ajoutons les prestations au fur et à mesure qu’elles sont annoncées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil plus tard, ou si votre situation change.",
+  "results.other_potential_help": "Aide supplémentaire disponible",
+  "results.other_potential_help.preamble": "L’aide suivante est également disponible :",
   "results.situation_changes": "Si votre situation change, vous pouvez répondre aux questions à nouveau pour trouver de nouveaux programmes d’aide.",
   "results_title": {
     "one": "%s programme pour vous aider",
     "other": "%s programmes pour vous aider"
   },
   "results_title_no_results": "Revenez voir dans quelques semaines",
-  "results.no_results.preamble": "Aucune prestation actuelle ne s’applique à votre situation. Nous ajoutons les prestations au fur et à mesure qu’elles sont annoncées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil plus tard, ou si votre situation change.",
   "rrif.1": "Oui.",
   "rrif.2": "Non.",
   "rrif.header": "Diminution du montant de retrait obligatoire de votre fond enregistré de revenu de retraite",
-  "rrif.link": "https://www.canada.ca/fr/agence-revenu/services/impot/particuliers/sujets/fonds-enregistre-revenu-retraite-ferr.html",
-  "rrif.linktext": "Contactez votre banque pour plus de détails",
-  "rrif.preamble": "<ul class='list-disc list-outside'><li>Le montant obligatoire que vous devrez retirer de votre fond enregistré de revenu de retraire en 2020 sera 25% plus bas afin que vous puissiez économiser. </li></ul>",
   "rrif.title": "FERR",
+  "some_income.title": "Votre situation",
+  "start.details.p.1": "Si vous êtes un Canadien actuellement à l’étranger et que vous avez besoin d’aide financière pour revenir au Canada, vous pouvez demander <a href='https://voyage.gc.ca/assistance/info-d-urgence/assistance-financiere/covid-19-aide-financiere' target='_blank'>un prêt d’urgence</a>.",
+  "start.details.summary": "Êtes vous un Canadien actuellement à l’étranger?",
   "start.intro.1": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous. Nous ne pouvons garantir votre admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
-  "start.intro.banner.1": "If you’re a Canadian abroad and need help to pay for your trip home, you can get an emergency loan from the government.",
-  "start.intro.banner.2": "Details are available online.",
-  "student_debt.1": "Oui.",
-  "student_debt.2": "Non.",
   "start.intro.2": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous. Nous ne pouvons garantir vorte admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
+  "start.intro.3": "De nouvelles prestations sont constamment créées et nous travaillons à les inclure aussitôt que possible.",
+  "start.lastupdated": "Dernière mise à jour le",
   "start.submit": "Commencer",
   "start.title": "Trouver de l’aide financière pendant la COVID-19",
   "start_over": "Recommencer",
+  "student_debt.1": "Oui.",
+  "student_debt.2": "Non.",
+  "student_debt.title": "Dette d’études",
   "student_loan.header": "Arrêt des paiements de votre dette d’étude pendant 6 mois",
+  "unchanged_income.title": "Votre situation",
   "wordmark.alt": "Symbole du gouvernement du Canada",
   "your_situation.no_income.1": "Vous avez perdu votre emploi ou votre employeur a cessé ses activités.",
   "your_situation.no_income.2": "Vous êtes travailleur autonome et n’avez aucun revenu.",
   "your_situation.no_income.3": "Vous êtes en congé sans solde pour prendre soin d’un enfant ou d’un proche malade.",
   "your_situation.no_income.4": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
   "your_situation.no_income.5": "Vous étiez récemment en congé parental, mais ne pouvez pas retourner travailler en raison de la COVID-19.",
-  "your_situation.no_income.6": "Vous receviez l’assurance-emploi et votre prestation s’est terminée après le 29\u00A0décembre\u00A02019.",
+  "your_situation.no_income.6": "Vous receviez l’assurance-emploi et votre prestation s’est terminée après le 29 décembre 2019.",
   "your_situation.some_income.1": "Votre employeur a réduit votre horaire de travail en raison de la COVID-19.",
   "your_situation.some_income.2": "Vous avez perdu un ou deux de vos emplois à temps partiel, mais avez toujours un revenu additionnel.",
   "your_situation.some_income.3": "Vous êtes travailleur autonome et avez perdu une partie de votre revenu, mais vous avez toujours un peu de travail rémunéré.",
@@ -91,36 +117,5 @@
   "your_situation.some_income.5": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
   "your_situation.unchanged_income.1": "Vous faites du télétravail.",
   "your_situation.unchanged_income.2": "Vous êtes en congé payé.",
-  "your_situation.unchanged_income.3": "Vous êtes retraité.",
-  "mortgage_payments.title": "Votre logement",
-  "ccb.title": "Allocation canadienne pour enfants",
-  "student_debt.title": "Dette d’études",
-  "start.lastupdated": "Dernière mise à jour le",
-  "start.intro.3": "De nouvelles prestations sont constamment créées et nous travaillons à les inclure aussitôt que possible.",
-  "start.details.summary": "Êtes vous un Canadien actuellement à l’étranger?",
-  "start.details.p.1": "Si vous êtes un Canadien actuellement à l’étranger et que vous avez besoin d’aide financière pour revenir au Canada, vous pouvez demander <a href='https://voyage.gc.ca/assistance/info-d-urgence/assistance-financiere/covid-19-aide-financiere' target='_blank'>un prêt d’urgence</a>.",
-  "lost_job.title": "Perte de revenu en lien avec la COVID-19",
-  "results.other_potential_help": "Aide supplémentaire disponible",
-  "results.other_potential_help.preamble": "L’aide suivante est également disponible :",
-  "some_income.title": "Votre situation",
-  "no_income.title": "Votre situation",
-  "unchanged_income.title": "Votre situation",
-  "gross_income.title": "Votre revenu",
-  "results.banner": "Vous n’avez pas répondu à quelques questions. <a href='/clear'>Recommencez</a> pour recevoir vos résultats complets.",
-  "feedback.button": "Signaler un problème ou une erreur sur cette page",
-  "feedback.question": "Cochez tous les problèmes qui s’appliquent.",
-  "feedback.1": "L’information sur cette page est incorrecte",
-  "feedback.2": "L’information sur cette page porte à confusion.",
-  "feedback.3": "Vous ne trouvez pas l’information dont vous avez besoin",
-  "feedback.4": "Cette page n’est pas compatible avec mon lecteur d’écran ou une autre technologie d’adaptation.",
-  "feedback.5": "Je m’inquiète de la manière dont mes renseignements pourraient être utilisés.",
-  "feedback.6": "Autre",
-  "feedback.submit": "Soumettre",
-  "feedback.thanks": "Merci de nous avoir aidés à améliorer le service!",
-  "reduced_income.title": "Votre revenu partiel",
-  "reduced_income.1": "1000 $ ou moins.",
-  "reduced_income.2": "1001 $ ou plus.",
-  "form.reduced_income": "Combien de revenu anticipez-vous recevoir à chaque mois à partir de maintenant?",
-  "feedback-thanks.title": "Merci!",
-  "feedback-thanks.text": "Merci de nous avoir aidés à améliorer le service!"
+  "your_situation.unchanged_income.3": "Vous êtes retraité."
 }
