--- a/locales/en.json
+++ b/locales/en.json
@@ -46,7 +46,7 @@
   "form.gross_income": "How much total income before taxes did you earn from paid work in 2019 or the last 12 months?",
   "form.lost_job": "Choose the description that best fits your situation",
   "form.mortgage_payments": "Are you worried about making mortgage or rent payments?",
-  "form.reduced_income": "How much do you expect to earn per month now?",
+  "form.reduced_income": "How much do you expect to earn before taxes per month now?",
   "form.rrif": "Do you have a Registered Retirement Income Fund (RRIF)?",
   "form.student_debt": "Do you have student loans you owe the government?",
   "form.your_situation.no_income": "Choose the description that best fits your situation",
@@ -109,7 +109,7 @@
   "your_situation.no_income.3": "You’re on unpaid leave to care for a child or sick person.",
   "your_situation.no_income.4": "You’re sick or in mandatory quarantine and on unpaid leave.",
   "your_situation.no_income.5": "You were on parental leave recently, but you cannot return to work due to COVID-19.",
-  "your_situation.no_income.6": "You were on Employment Insurance and your claim ended after December 29, 2019.",
+  "your_situation.no_income.6": "You were on Employment Insurance Regular or Fishing Benefits and your claim ended on or after January 5, 2020.",
   "your_situation.some_income.1": "Your employer has reduced your hours due to COVID-19.",
   "your_situation.some_income.2": "You’ve lost one or two part-time jobs and still have some income.",
   "your_situation.some_income.3": "You’re self-employed and lost some income but you still have some paid work.",
